--- a/essays/e3.md
+++ b/essays/e3.md
@@ -6,21 +6,22 @@ title: "E3: Preparing for WODs"
 date: 2015-08-26
 published: true
 labels:
-  - Management Information Systems
+  - Data Types
   - Programming
+  - Variables
 ---
 
-<h1 class="Introduction:">
+## Introduction:
 In my journey through ITM352, I recently tackled WOD 5.1: SmartPhoneProducts1 with Variables. This Web-oriented development (WOD) assignment aimed to enhance our understanding of using variables to eliminate hard coding and separating product data from the code for better maintenance and flexibility. This blog entry reflects on my experiences while preparing for and executing WOD 5.1.
 
 For details on WOD 5.1, you can find it on Dr. Port's GitHub repository <ul>
   <li><a href="https://dport96.github.io/ITM352/morea/060.expressions-operators/experience-invoice1.html">here</a></li>
 </ul>
 
-My Experiences:
-Performing WOD 5.1 was both challenging and enlightening. Here's what worked well and what presented challenges during the exercise.
+## My Experiences:
+Performing WOD 5.1 wasn't that difficult and was very enlightening. Here's what worked well and what presented challenges during the exercise.
 
-What Worked Well:
+## What Worked Well:
 
 Prior Knowledge: Having completed previous WODs in the ITM352 course, I was familiar with the workflow and the tools required for the assignment, which helped me get started quickly.
 
@@ -28,15 +29,15 @@ Understanding Variables: Understanding the concept of variables was crucial. By 
 
 Regex Usage: The use of regular expressions to find and replace elements in HTML proved to be a valuable skill. It allowed for swift and precise modifications.
 
-Challenges Faced:
+## Challenges Faced:
 
 Image Loading: Ensuring that images were loading correctly was a minor challenge. Double-checking the image paths and ensuring they were correct was essential to avoid any display issues.
 
 Variable Organization: As the assignment required a significant number of variables, organizing them and ensuring I had correctly replaced each instance proved to be a meticulous task.
 
-Debugging: Troubleshooting issues can be time-consuming. Identifying errors, especially when they don't produce obvious error messages, required patience and careful examination of the code.
+Debugging: Troubleshooting issues can be time-consuming. Identifying errors, especially when they don't produce obvious error messages, requires patience and careful examination of the code.
 
-Preparing for WOD 5.1:
+## Preparing for WOD 5.1:
 To prepare for WOD 5.1, I followed a structured approach:
 
 Reviewing Previous WODs: I revisited previous WODs, particularly those related to JavaScript variables and DOM manipulation, to refresh my memory and build confidence.
@@ -45,11 +46,7 @@ Reading Instructions Carefully: A thorough reading of the assignment instruction
 
 Setting Up Tools: I ensured that my development environment, including my code editor, browser, and console, were set up and ready for use.
 
-Organizing Resources: Having quick access to image URLs and ensuring they were correct helped streamline the process of updating image sources.
-
-Testing Iteratively: I performed iterative testing after each code modification to identify and address any issues promptly.
-
-What Could Have Been Done Better:
+## What Could Have Been Done Better:
 In retrospect, there are a few things I could have done differently to be better prepared for WOD 5.1:
 
 More Robust Debugging: I could have allocated more time for debugging. This would have allowed me to explore and learn from any errors encountered during the process.
@@ -58,7 +55,7 @@ Peer Collaboration: Collaborating with peers or seeking assistance from instruct
 
 Documentation: Keeping detailed documentation of the code changes and the thought process behind them would have been beneficial for future reference.
 
-For the Next WOD:
+## For the Next WOD:
 In preparation for future WODs, I plan to:
 
 Practice Regularly: Continuously practicing JavaScript and HTML coding will help solidify my skills and confidence.
