--- a/essays/e3.md
+++ b/essays/e3.md
@@ -14,9 +14,8 @@ labels:
 ## Introduction:
 In my journey through ITM352, I recently tackled WOD 5.1: SmartPhoneProducts1 with Variables. This Web-oriented development (WOD) assignment aimed to enhance our understanding of using variables to eliminate hard coding and separating product data from the code for better maintenance and flexibility. This blog entry reflects on my experiences while preparing for and executing WOD 5.1.
 
-For details on WOD 5.1, you can find it on Dr. Port's GitHub repository <ul>
-  <li><a href="https://dport96.github.io/ITM352/morea/050.variables_data_types/experience-SmartPhoneProducts1_variables.html">here</a></li>
-</ul>
+For details on WOD 5.1, you can find it on Dr. Port's GitHub repository <a href="https://dport96.github.io/ITM352/morea/050.variables_data_types/experience-SmartPhoneProducts1_variables.html">here</a>
+
 
 ## My Experiences:
 Performing WOD 5.1 wasn't that difficult and was very enlightening. Here's what worked well and what presented challenges during the exercise.
