--- a/essays/e3.md
+++ b/essays/e3.md
@@ -12,9 +12,9 @@ labels:
 ---
 
 ## Introduction:
-In my journey through ITM352, I recently tackled WOD 5.1: SmartPhoneProducts1 with Variables. This Web-oriented development (WOD) assignment aimed to enhance our understanding of using variables to eliminate hard coding and separating product data from the code for better maintenance and flexibility. This blog entry reflects on my experiences while preparing for and executing WOD 5.1.
+This WOD (Invoice1) involved creating a sales receipt for a sale with at least five different products, using JavaScript variables, expressions, and dynamic calculations. Here, I'll discuss what went well, what presented challenges, my preparation strategy, and improvements for future WODs.
 
-For details on WOD 5.1, you can find it on Dr. Port's GitHub repository <a href="https://dport96.github.io/ITM352/morea/050.variables_data_types/experience-SmartPhoneProducts1_variables.html">here</a>
+For details on Invoice 1, you can find it on Dr. Port's GitHub repository <a href="https://dport96.github.io/ITM352/morea/060.expressions-operators/experience-invoice1.html">here</a>
 
 
 ## My Experiences:
@@ -22,37 +22,37 @@ Performing WOD 5.1 wasn't that difficult and was very enlightening. Here's what 
 
 ## What Worked Well:
 
-Prior Knowledge: Having completed previous WODs in the ITM352 course, I was familiar with the workflow and the tools required for the assignment, which helped me get started quickly.
+Product Data Setup: Creating variables for each product and calculating their extended prices based on quantity and price was relatively straightforward. This allowed for easy customization of the products.
 
-Understanding Variables: Understanding the concept of variables was crucial. By separating product data from the code, it became evident that variables could streamline the process and make it more efficient.
+Calculations: The calculations for subtotal, sales tax, and total were accurate, thanks to the straightforward math operations in JavaScript.
 
-Regex Usage: The use of regular expressions to find and replace elements in HTML proved to be a valuable skill. It allowed for swift and precise modifications.
+Table Generation (Option 2): Using the insertRow method to dynamically add rows to the table worked well. It kept the code organized and made it easier to update if more products were added.
 
 ## Challenges Faced:
 
-Image Loading: Ensuring that images were loading correctly was a minor challenge. Double-checking the image paths and ensuring they were correct was essential to avoid any display issues.
+Debugging: Debugging took some time, especially when I encountered issues with case sensitivity in JavaScript properties like innerHTML. Typographical errors can easily disrupt the functionality.
 
-Variable Organization: As the assignment required a significant number of variables, organizing them and ensuring I had correctly replaced each instance proved to be a meticulous task.
-
-Debugging: Troubleshooting issues can be time-consuming. Identifying errors, especially when they don't produce obvious error messages, requires patience and careful examination of the code.
+HTML Integration: Initially, I tried to generate HTML rows using document.write(), which led to confusion in managing the layout. Switching to using insertRow (Option 2) improved the readability of the code.
 
 ## Preparing for WOD 5.1:
-To prepare for WOD 5.1, I followed a structured approach:
+To prepare for this WOD, I followed a similar strategy to previous WODs:
 
-Reviewing Previous WODs: I revisited previous WODs, particularly those related to JavaScript variables and DOM manipulation, to refresh my memory and build confidence.
+Understanding Requirements: I thoroughly read and understood the WOD requirements to ensure I knew what was expected.
 
-Reading Instructions Carefully: A thorough reading of the assignment instructions was essential to grasp the specific requirements and expectations.
+Conceptualizing the Solution: I outlined a plan for the task, breaking it down into smaller steps, such as setting up product variables and calculating prices.
 
-Setting Up Tools: I ensured that my development environment, including my code editor, browser, and console, were set up and ready for use.
+Code Structure: I created a structured script, clearly separating sections for product data, calculations, table generation, and displaying results.
+
+Testing Incrementally: I tested each part of the code incrementally as I added functionality. This approach helped catch and resolve issues early.
 
 ## What Could Have Been Done Better:
-In retrospect, there are a few things I could have done differently to be better prepared for WOD 5.1:
+Error Handling: Implementing better error handling and validation mechanisms could enhance the code's robustness.
 
-More Robust Debugging: I could have allocated more time for debugging. This would have allowed me to explore and learn from any errors encountered during the process.
+Code Reusability: Consider refactoring the code to make it more modular and reusable. For instance, creating functions for calculations and table generation could make it easier to maintain.
 
-Peer Collaboration: Collaborating with peers or seeking assistance from instructors could have provided different perspectives and solutions to potential roadblocks.
+Testing Strategy: Exploring testing frameworks and methodologies could help identify and resolve issues more efficiently.
 
-Documentation: Keeping detailed documentation of the code changes and the thought process behind them would have been beneficial for future reference.
+Documentation: Adding detailed comments and documentation to the code can improve its readability and make it easier for others to understand and modify.
 
 ## For the Next WOD:
 In preparation for future WODs, I plan to:
