--- a/essays/e5.md
+++ b/essays/e5.md
@@ -1,1 +1,29 @@
+---
+layout: essay
+type: essay
+title: "E5: Reflecting on Assignment 2 Technical Essay"
+# All dates must be YYYY-MM-DD format!
+date: 2023-12-14
+published: true
+labels:
+  - Information Technology
+---
+
+## Assignment 2:
+
+Assignment 2 showcases a robust login page that seamlessly integrates with the user_data.json file to validate username and password entries. In the event of a mismatch, a validation message is communicated, hindering the ability to proceed with the "purchase" of an item. Upon successful login, the purchasing process becomes persistent, allowing for seamless progression.
+
+This assignment has significantly enhanced my understanding of app.post functionality and the broader implications of utilizing a "POST" method. Exploring various approaches to implement functions has provided valuable insights, particularly in identifying optimal usage scenarios.
+
+Although I worked independently, engagement in study sessions proved instrumental in gaining valuable perspectives from peers. The Registration page presented a notable challenge as it was not integrated into the user_data.json file, causing complications in the registration process despite the fully operational login page. Seeking assistance from classmates, previous course takers, the professor, the TA, and friends became a consistent practice to overcome hurdles and deepen my comprehension.
+
+This assignment marked a departure from the predominantly client-side focus of Assignment 1, emphasizing server-side tasks involving the manipulation and interaction of JSON files. While Assignment 1 centered on validation and visual aesthetics, Assignment 2 demanded a more intricate understanding of server-side processes.
+
+Reflecting on the development process, approximately 20% of my effort went into conceptualizing the code, while the actual coding accounted for 30%, leaving the majority, 50%, for rigorous testing and debugging.
+
+The familiarity with the existing codebase from Assignment 1 streamlined variable declaration and additions. Conversely, Assignment 2 posed challenges due to a lack of clear guidance and prior knowledge, leading to frequent pauses, extensive communication with others, and experimentation with diverse code snippets.
+
+In hindsight, dedicating more time to research server-side processes beyond the assigned readings and modules would have been beneficial. While I did engage with the provided materials, additional independent research could have better prepared me for the complexities encountered during the assignment.
+
+
 
