--- a/essays/e6.md
+++ b/essays/e6.md
@@ -1,1 +1,72 @@
+---
+layout: essay
+type: essay
+title: "E6: Evaluation Guidelines and Class Retrospective Blog"
+# All dates must be YYYY-MM-DD format!
+date: 2023-12-14
+published: true
+labels:
+  - Information Technology
+---
 
+## Assignment 3:
+
+
+## Brief Description of the System:
+The provided code appears to be a server-side implementation for an online store. The system includes user authentication, session management, email notifications, and functionality to handle user registration, login, and product purchases. The store seems to sell various products categorized as "box," "card," and "mat."
+
+## Notable Shortcomings, Bugs, Problems, or Additional Features Not Implemented:
+Security Concerns: Storing passwords as plain text in user_data.json is a significant security concern. It is recommended to store hashed and salted passwords for enhanced security.
+
+Incomplete Session Handling: The code manages sessions but doesn't appear to handle session expiration or logout effectively. There's a need for a robust session management strategy.
+
+Email Configuration: The email configuration relies on a hardcoded host (mail.hawaii.edu). It might be better to make this configurable and not reject unauthorized certificates.
+
+Error Handling: While errors are identified, there isn't a consistent and comprehensive error-handling mechanism throughout the code.
+
+## What I'm Most Proud of About My System:
+User Authentication: The system successfully authenticates users, stores user-related information in cookies, and maintains login status.
+
+Product Handling: The code manages product quantities, updates the total sold, and maintains a structured product array.
+
+Email Integration: The integration of Nodemailer for sending order confirmation emails is a positive aspect of the system.
+
+## What I'm Least Happy With My System:
+Password Handling: Storing passwords as plain text is a security vulnerability. Implementing a more secure password storage mechanism is essential.
+
+Session Handling: The session handling and logout functionality could be improved for better security and user experience.
+
+Error Messaging: While errors are identified, more detailed and user-friendly error messages could enhance the user experience.
+
+## How Developing This Assignment Was Different Than Assignment #2:
+Server-Side Emphasis: Assignment #3 focuses more on server-side processes, including user authentication, product handling, and email communication, as compared to Assignment #2, which emphasizes client-side validation and webpage aesthetics.
+
+## How You Addressed Problems:
+Collaboration: The code includes comments mentioning assistance from individuals (Ethan Schwarz, Anthony Lee, Reyn, and Marina Cleavenger).
+
+Research: External research, consulting with peers, and utilizing external sources for understanding concepts like password hashing and session handling.
+
+## What Worked Well:
+Code Familiarity: The developer's familiarity with the code from Assignment #1 facilitated variable declaration and additions.
+
+Product Sorting: Products are effectively sorted by type, enhancing the user experience in navigating the store.
+
+## What Did Not Work Well:
+Lack of Documentation: Some sections lack sufficient comments or documentation, making it challenging to understand the purpose and functionality of certain code segments.
+
+Limited Session Handling: The code lacks a comprehensive session handling mechanism, and there are areas where session-related tasks could be better structured.
+
+## What I Learned:
+Server-Side Processes: Assignment #3 provided a deeper understanding of server-side processes, emphasizing tasks such as updating JSON files and making them interact.
+
+Password Encryption: Learned about password encryption techniques, such as SHA-256 hashing, for improved security.
+
+## If I Could Go Back in Time and Do Things Differently:
+Research: The developer would allocate more time to research server-side processes beyond the assigned readings and modules.
+
+Security Implementation: Implement a more secure password storage mechanism from the beginning.
+
+## Estimated Time Breakdown:
+Thinking about How to Do Something: 20%
+Writing Code (excluding testing): 30%
+Testing and Debugging: 50%
