--- a/essays/e6.md
+++ b/essays/e6.md
@@ -13,10 +13,10 @@ labels:
 
 
 ## Brief Description of the System:
-The provided code appears to be a server-side implementation for an online store. The system includes user authentication, session management, email notifications, and functionality to handle user registration, login, and product purchases. The store seems to sell various products categorized as "box," "card," and "mat."
+The system is a server-side implementation for an online store selling various towels, bags, and poncho products. The system includes user authentication, session management, email notifications, and functionality to handle user registration, login, and product purchases. 
 
 ## Notable Shortcomings, Bugs, Problems, or Additional Features Not Implemented:
-Security Concerns: Storing passwords as plain text in user_data.json is a significant security concern. It is recommended to store hashed and salted passwords for enhanced security.
+Security Concerns: Storing passwords as plain text in user_data.json is a significant security concern. Next time I would store hashed and salted passwords for enhanced security.
 
 Incomplete Session Handling: The code manages sessions but doesn't appear to handle session expiration or logout effectively. There's a need for a robust session management strategy.
 
